--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pizzaria - A melhor de Curitiba</title>
+		<title>Pizzaria Nove - A melhor de Curitiba</title>
         <link hrel="style.css" />
 	</head>
 	<body>
@@ -17,12 +17,24 @@
                     <a href="#" class="nav-itens">Contato</a>
                 </li>
                 <li class="nav-list">
-                    <a href="#" class="nav-itens">Sobre</a>
+                    <a href="#texto-pizzaria" class="nav-itens">Sobre</a>
                 </li>
             </nav>
         </div>
-        <div class="text">
-
+        <div class="sobre-div">
+            <div class="text-pizza">
+                <h2 class="text-subtitle">A Pizzaria Nove tem bastante variedade?</h2>
+                <p class="text-main">Com nosso cardapio amplo você pode degustar de mais de 90 sabores, sendo 30 deles doce e 60 salgados.</p>
+            </div>
+            <div class="text-pizza">
+                <h2 class="text-subtitle">Hoje é meu aniversario, ganho desconto?</h2>
+                <p class="text-main">Se você é aniversariante ganhará um vale para comer de graça na proxima vez que vir em nossa pizzaria.</p>
+            </div>
+            <div class="text-pizza">
+                <h2 class="text-subtitle">Aonde a Pizzaria Nove fica?</h2>
+                <p class="text-main">Nos localizamos no bairro <strong>Água Verde</strong> na rua <strong>Carlos Shevi Nove</strong> número <strong>910</strong>.</p>
+            </div>
+            <img class="pizza-img" src="https://img.itdg.com.br/tdg/images/blog/uploads/2019/05/pizza.jpg" alt="Imagem de pizza">
         </div>
 	</body>
 </html>
