--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Pizzaria Nove - A melhor de Curitiba</title>
-        <link rel="stylesheet" hrel="style.css" />
+        <link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
         <div class="div-nav">
