--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a href="#" class="nav-itens">Cardapio</a>
                 </li>
                 <li class="nav-list">
-                    <a href="#" class="nav-itens">Contatos</a>
+                    <a href="#" class="nav-itens">Contato</a>
                 </li>
                 <li class="nav-list">
                     <a href="#texto-pizzaria" class="nav-itens">Sobre</a>
