--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="sobre-div">
             <div class="text-pizza">
                 <h2 class="text-subtitle">A Pizzaria Nove tem bastante variedade?</h2>
-                <p class="text-main">Com nosso cardapio amplo você pode degustar de mais de 90 sabores, sendo 30 deles doce e 60 salgados.</p>
+                <p class="text-main"><em>Com nosso cardapio amplo você pode degustar de mais de 90 sabores, sendo 30 deles doce e 60 salgados.</em></p>
             </div>
             <div class="text-pizza">
                 <h2 class="text-subtitle">Hoje é meu aniversario, ganho desconto?</h2>
-                <p class="text-main">Se você é aniversariante ganhará um vale para comer de graça na proxima vez que vir em nossa pizzaria.</p>
+                <p class="text-main"><em>Se você é aniversariante ganhará um vale para comer de graça na proxima vez que vir em nossa pizzaria.</em></p>
             </div>
             <div class="text-pizza">
                 <h2 class="text-subtitle">Aonde a Pizzaria Nove fica?</h2>
-                <p class="text-main">Nos localizamos no bairro <strong>Água Verde</strong> na rua <strong>Carlos Shevi Nove</strong> número <strong>910</strong>.</p>
+                <p class="text-main"><em>Nos localizamos no bairro <strong>Água Verde</strong> na rua <strong>Carlos Shevi Nove</strong> número <strong>910</strong>.</em></p>
             </div>
         </div>
 	</body>
