--- a/cardapio.html
+++ b/cardapio.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Pizzaria Nove - A melhor de Curitiba</title>
+        <link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+        <div class="div-nav">
+            <nav class="nav-main">
+                <li class="nav-list">
+                    <a href="#" class="nav-itens">Menu</a>
+                </li>
+                <li class="nav-list">
+                    <a href="#" class="nav-itens">Cardapio</a>
+                </li>
+                <li class="nav-list">
+                    <a href="#" class="nav-itens">Contato</a>
+                </li>
+                <li class="nav-list">
+                    <a href="#texto-pizzaria" class="nav-itens">Sobre</a>
+                </li>
+            </nav>
+        </div>
+        <div class="container">
+        </div>
+        <img class="pizza-img" src="https://s2.glbimg.com/wMQRG2vmN_dDJ-1HrSwGOKEbZak=/0x0:1080x608/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/e/n/G9IuruRaezxqgmwozOyg/capa-materia-gshow-49-.png" alt="Imagem de pizza">
+        <div class="sobre-div">
+            <div class="text-pizza">
+                <h2 class="text-subtitle">A Pizzaria Nove tem bastante variedade?</h2>
+                <p class="text-main"><em>Com nosso cardapio amplo você pode degustar de mais de 90 sabores, sendo 30 deles doce e 60 salgados.</em></p>
+            </div>
+            <div class="text-pizza">
+                <h2 class="text-subtitle">Hoje é meu aniversario, ganho desconto?</h2>
+                <p class="text-main"><em>Se você é aniversariante ganhará um vale para comer de graça na proxima vez que vir em nossa pizzaria.</em></p>
+            </div>
+            <div class="text-pizza">
+                <h2 class="text-subtitle">Aonde a Pizzaria Nove fica?</h2>
+                <p class="text-main"><em>Nos localizamos no bairro <strong>Água Verde</strong> na rua <strong>Carlos Shevi Nove</strong> número <strong>910</strong>.</em></p>
+            </div>
+        </div>
+	</body>
+</html>
