--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                     <a href="#" class="nav-itens">Menu</a>
                 </li>
                 <li class="nav-list">
-                    <a href="#" class="nav-itens">Cardapio</a>
+                    <a href="cardapio.html" class="nav-itens">Cardapio</a>
                 </li>
                 <li class="nav-list">
                     <a href="#" class="nav-itens">Contato</a>
