--- a/cardapio.html
+++ b/cardapio.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pizzaria Nove - A melhor de Curitiba</title>
+		<title>Gran Nove Pizzaria - A melhor de Curitiba</title>
         <link rel="stylesheet" href="style.css" />
+        <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 	</head>
 	<body>
         <div class="div-nav">
             <nav class="nav-main">
                 <li class="nav-list">
-                    <a href="#" class="nav-itens">Menu</a>
+                    <a href="index.html" class="nav-itens">Menu</a>
                 </li>
                 <li class="nav-list">
                     <a href="#" class="nav-itens">Cardapio</a>
@@ -24,6 +25,14 @@
         <div class="container">
         </div>
         <img class="pizza-img" src="https://s2.glbimg.com/wMQRG2vmN_dDJ-1HrSwGOKEbZak=/0x0:1080x608/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/e/n/G9IuruRaezxqgmwozOyg/capa-materia-gshow-49-.png" alt="Imagem de pizza">
+        <div class="anount">
+            <img class="logo-img" src="https://i.imgur.com/YMr8ffJ.png" alt="Logo">
             <h2 class="cardapio-title">Oque você ira encontrar em nosso cardapio?</h2>
+        </div>
+        <ul class = "list-cardapio">
+            <li class="list-itens">
+                
+            </li>
+        </ul>
 	</body>
 </html>
