--- a/cardapio.html
+++ b/cardapio.html
@@ -31,7 +31,7 @@
         </div>
         <ul class = "list-cardapio">
             <li class="list-itens">
-                
+                Pizza de calabresa
             </li>
         </ul>
 	</body>
