--- a/cardapio.html
+++ b/cardapio.html
@@ -30,8 +30,32 @@
             <h2 class="cardapio-title">Oque você ira encontrar em nosso cardapio?</h2>
         </div>
         <ul class = "list-cardapio">
+	    <li class="list-itens">
+                Pizza argentina
+            </li>
+	    <li class="list-itens">
+                Pizza de atum
+            </li>
+	    <li class="list-itens">
+                Pizza americana
+            </li>
+	    <li class="list-itens">
+                Pizza de alho
+            </li>
+	    <li class="list-itens">
+                Pizza baiana
+            </li>
             <li class="list-itens">
                 Pizza de calabresa
+            </li>
+	    <li class="list-itens">
+                Pizza de carne seca com catupiry
+            </li>
+	    <li class="list-itens">
+                Pizza de Banana nevada
+            </li>
+	    <li class="list-itens">
+                Pizza Sensação
             </li>
         </ul>
 	</body>
