--- a/cardapio.html
+++ b/cardapio.html
@@ -57,6 +57,9 @@
 	    <li class="list-itens">
                 Pizza Sensação
             </li>
+	    <li class="list-itens">
+                E diversos outros sabores deliciosos !
+            </li>
         </ul>
 	</body>
 </html>
